2009-01-10  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m): Check whether to load the last autosaved
	sessions.  Suggested by Samuel Wales <samologist@gmail.com>.

	* w3m-session.el (w3m-session-automatic-keep-number): New variable.
	Suggested by Samuel Wales <samologist@gmail.com>.
	(w3m-session-automatic-save): Use it.
	(w3m-session-last-autosave-session): New function.
	(w3m-session-load-last-sessions): New variable.

	* w3m.el (w3m-image-anchor): New face.
	(w3m-fontify-images): Use it.

2009-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-language): Allow the value like "Japanese (UTF-8)" of
	current-language-environment.

	* w3m-symbol.el (w3m-symbol): Ditto.

	* w3mhack.el (w3mhack-makeinfo): Use locale-coding-system for Emacs to
	encode Japanese messages.

2009-01-09  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-create-text-page, w3m-goto-url): Check if the url is
	arrived before getting real-url.

2009-01-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top): Add the variable definitions of
	`w3m-tab-menubar-make-items-preitems' and `w3m-session-menu-items-pre'
	to avoid byte-compile warnings.
	(w3m-setup-menu): Move the postion of session menu.
	(w3m-mouse-major-mode-menu): Add session menu.

	* w3m-xmas.el (autoload): Add w3m-setup-session-menu.
	(w3m-menu-on-forefront): Treat "Session" menu.
	(w3m-setup-menu): Call `w3m-setup-session-menu'.

2008-12-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-select-buffer-mode-map): Bind `w3m-select-buffer-quit' to
	C-g.

	* w3m-session.el (w3m-session-select-mode-map): Bind
	`w3m-session-select-quit' to C-g.

	* w3m-form.el (w3m-form-input-select-keymap): Bind
	`w3m-form-input-select-keymap' to C-g.
	(w3m-form-input-map-keymap): Bind `w3m-form-input-map-exit' to C-g.

2008-12-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-session.el (w3m-session-select-mode-map): Add new key.
	(w3m-session-select-mode): Modify doc-string.
	(w3m-session-select-rename): New command.